Added image to frontend page.

--- a/html/careers/frontend.html
+++ b/html/careers/frontend.html
@@ -340,10 +340,17 @@
             </li>
           </ul>
         </div>
-      </nav>
+      </nav><!-- * banner -->
+      <header class="banner frontend-page-banner">
+        <div class="banner-wrapper">
+          <p
+            >"Websites  promote you 24/7: No employee will do that." – Paul Cookson</p
+          >
+        </div>
+      </header>
 
       <!--* intro -->
-      <header class="intro">
+      <section class="intro">
         <div class="intro-wrapper">
           <h2 class="heading">Begin Your Frontend Developer Journey!</h2>
           <div class="intro__body">
@@ -363,7 +370,7 @@
             <p>Congrats once again.</p>
           </div>
         </div>
-      </header>
+      </section>
 
       <!--* main content -->
       <main class="resources">
