--- a/html/careers/frontend.html
+++ b/html/careers/frontend.html
@@ -770,10 +770,10 @@
 
           <div class="resource-section__body">
             <p
-              >Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque
-              nostrum dolore natus similique in repellat debitis, pariatur vel
-              praesentium iusto odio enim deleniti autem doloremque velit
-              reprehenderit dolorem itaque sequi.</p
+              >HTML and CSS are the 2 most important languages when it comes to building a website. HTML which stands for Hypertext Markup Language provides the structure of the page and CSS which stands for Cascading Style Sheets determines the visual layout of webpages. These are the first set of languages you will learn as a frontend developer.</p
+            >
+          <p
+              >You will find enough resources below to help you learn, along with projects you can build to practice and showcase your newly acquired skills.</p
             >
           </div>
 
@@ -913,7 +913,8 @@
           >
 
           <div class="resource-section__body">
-            <p>Animations, Responsive Web Design, etc</p>
+            <p>Now that you have learned the basics of HTML and CSS, it's time to level. Learn more on making your webpages more responsive and compatible on all devices using CSS Flexbox and Grid.</p>
+            <p>You can also make your pages more fun with CSS transitions and animations. Some cool projects on CSS animations will be listed down below too to inspire you.</p>
           </div>
 
           <div class="resource-section__links">
@@ -1041,10 +1042,7 @@
 
           <div class="resource-section__body">
             <p
-              >Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempore
-              eum reprehenderit incidunt laudantium a dolores, deleniti nihil
-              totam corrupti ex explicabo placeat? Magni omnis, blanditiis quam
-              dolorem impedit voluptatum numquam!</p
+              >It's time to learn JavaScript, your first programing language. JavaScript along with HTML and CSS make up the Holy Trinity of the web when it comes to frontend. It is a programming language used to make web pages dynamic and interactive. Those forms and buttons you have been creating that don't perform any actions, now you can make them do something.</p
             >
           </div>
 
@@ -1214,10 +1212,7 @@
 
           <div class="resource-section__body">
             <p
-              >Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempore
-              eum reprehenderit incidunt laudantium a dolores, deleniti nihil
-              totam corrupti ex explicabo placeat? Magni omnis, blanditiis quam
-              dolorem impedit voluptatum numquam!</p
+              >You have learned the basics of JavaScript, time to learn modern and new concepts to help you write easier and better codes like  Arrow functions, Modules, and the other goodies that came with JavaScript es6.</p
             >
           </div>
 
@@ -1387,10 +1382,10 @@
 
           <div class="resource-section__body">
             <p
-              >Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempore
-              eum reprehenderit incidunt laudantium a dolores, deleniti nihil
-              totam corrupti ex explicabo placeat? Magni omnis, blanditiis quam
-              dolorem impedit voluptatum numquam!</p
+              >Version Control also known as Source Control is a way of managing and tracking the changes made to your code over time. This allows you to easily compare changes made and revert to old versions if the need arises. You can find different tools below that help you do that.</p
+            >
+            <p
+              >If you are finding Git hard to understand, you can learn Git Desktop which is less complicated, use it for a while and then come back to Git.</p
             >
           </div>
 
@@ -1503,10 +1498,7 @@
 
           <div class="resource-section__body">
             <p
-              >Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempore
-              eum reprehenderit incidunt laudantium a dolores, deleniti nihil
-              totam corrupti ex explicabo placeat? Magni omnis, blanditiis quam
-              dolorem impedit voluptatum numquam!</p
+              >Now that you have successfully hosted your codes on GitHub or BitBucket, you would want a server to host your frontend applications either temporarily or permanently and also have testable links which you can share with friends and potential clients so they can admire and see the hard work you have done.</p
             >
           </div>
 
@@ -1569,10 +1561,11 @@
 
           <div class="resource-section__body">
             <p
-              >Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempore
-              eum reprehenderit incidunt laudantium a dolores, deleniti nihil
-              totam corrupti ex explicabo placeat? Magni omnis, blanditiis quam
-              dolorem impedit voluptatum numquam!</p
+              >CSS frameworks and libraries
+CSS frameworks and libraries are reusable codes written by someone else that you can use instead of writing your CSS code from scratch.</p
+            >
+          p
+              >They aid you in having a more standards-compliant and responsive web design using the CSS language. And some even come with extra features that have JavaScript integrated into them. Check out some of the most popular ones below.</p
             >
           </div>
 
@@ -2048,10 +2041,7 @@
 
           <div class="resource-section__body">
             <p
-              >Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempore
-              eum reprehenderit incidunt laudantium a dolores, deleniti nihil
-              totam corrupti ex explicabo placeat? Magni omnis, blanditiis quam
-              dolorem impedit voluptatum numquam!</p
+              >CSS Processors allow you to write css-like codes which you can then compile into normal CSS code. You get to write CSS as if you were writing a programming language which in turn offers you a wide variety of logical syntax. Don't fret, it's easier than it sounds. Check them out below.</p
             >
           </div>
 
@@ -2133,16 +2123,13 @@
           </div>
         </section>
 
-        <!--* JSON and JSON Server -->
+        <!--* JSON -->
         <section id="json" class="resource-section">
           <h2 class="resource-section__heading">JSON and JSON Server</h2>
 
           <div class="resource-section__body">
             <p
-              >Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempore
-              eum reprehenderit incidunt laudantium a dolores, deleniti nihil
-              totam corrupti ex explicabo placeat? Magni omnis, blanditiis quam
-              dolorem impedit voluptatum numquam!</p
+              >JSON which stands forJavaScript Object Notation is a text-based data exchange format. Commonly used for transmitting data in web applications like sending data to and fro between the server and client, so it can be displayed on a web page, or vice versa.</p
             >
           </div>
 
@@ -2337,10 +2324,7 @@
 
           <div class="resource-section__body">
             <p
-              >Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempore
-              eum reprehenderit incidunt laudantium a dolores, deleniti nihil
-              totam corrupti ex explicabo placeat? Magni omnis, blanditiis quam
-              dolorem impedit voluptatum numquam!</p
+              >An API is an intermediary between two applications software allowing them easily communicate and share data. It stands for Application Programming Interface. This is easy to understand by both computers and humans as it’s outputted in key/value pairs. Find out more below.</p
             >
           </div>
 
@@ -2535,10 +2519,7 @@
 
           <div class="resource-section__body">
             <p
-              >Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempore
-              eum reprehenderit incidunt laudantium a dolores, deleniti nihil
-              totam corrupti ex explicabo placeat? Magni omnis, blanditiis quam
-              dolorem impedit voluptatum numquam!</p
+              >A JavaScript framework is an application framework written in JavaScript where programmers can manipulate the functions and use them for their convenience. They make working with JavaScript easier and smoother. So you have to have reasonable knowledge of JavaScript before using it.</p
             >
           </div>
 
@@ -3007,10 +2988,7 @@
 
           <div class="resource-section__body">
             <p
-              >Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque
-              nostrum dolore natus similique in repellat debitis, pariatur vel
-              praesentium iusto odio enim deleniti autem doloremque velit
-              reprehenderit dolorem itaque sequi.</p
+              >Below are tools you can use to aid the creative process from, free photos to icons, fonts, and other goodies. Explore them.</p
             >
           </div>
 
@@ -3298,10 +3276,7 @@
 
           <div class="resource-section__body">
             <p
-              >Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempore
-              eum reprehenderit incidunt laudantium a dolores, deleniti nihil
-              totam corrupti ex explicabo placeat? Magni omnis, blanditiis quam
-              dolorem impedit voluptatum numquam!</p
+              >Cheatsheets are short lists of information that you can use to help you do or remember something. Below are cheatsheets on what you have been learning so far. Do enjoy!</p
             >
           </div>
 
@@ -3421,11 +3396,10 @@
 
           <div class="resource-section__body">
             <p
-              >Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempore
-              eum reprehenderit incidunt laudantium a dolores, deleniti nihil
-              totam corrupti ex explicabo placeat? Magni omnis, blanditiis quam
-              dolorem impedit voluptatum numquam!</p
-            >
+              >Pat yourself on the back for making it this far. Do continue to practice your skills, build more projects, and apply for jobs.</p
+            ><p>If you plan on becoming a FullStack Developer, then check out our Backend Development Roadmap. Don't forget to start our Repo and tweet a thank you to the creator of this project.</p>
+
+<p>Happy Coding!</p>
           </div>
         </section>
       </main>
