fixed grammatical errors in frontend page.

--- a/html/careers/frontend.html
+++ b/html/careers/frontend.html
@@ -913,7 +913,7 @@
           >
 
           <div class="resource-section__body">
-            <p>Now that you have learned the basics of HTML and CSS, it's time to level. Learn more on making your webpages more responsive and compatible on all devices using CSS Flexbox and Grid.</p>
+            <p>Now that you have learned the basics of HTML and CSS, it's time to level up. Learn more on making your webpages more responsive and compatible on all devices using CSS Flexbox and Grid.</p>
             <p>You can also make your pages more fun with CSS transitions and animations. Some cool projects on CSS animations will be listed down below too to inspire you.</p>
           </div>
 
@@ -1042,7 +1042,7 @@
 
           <div class="resource-section__body">
             <p
-              >It's time to learn JavaScript, your first programing language. JavaScript along with HTML and CSS make up the Holy Trinity of the web when it comes to frontend. It is a programming language used to make web pages dynamic and interactive. Those forms and buttons you have been creating that don't perform any actions, now you can make them do something.</p
+              >It's time to learn JavaScript, your first programing language.</p><p>JavaScript along with HTML and CSS make up the Holy Trinity of the web when it comes to frontend.</p><p>It is a programming language used to make web pages dynamic and interactive. Those forms and buttons you have been creating that don't perform any actions, now you can make them do something.</p
             >
           </div>
 
@@ -1212,7 +1212,7 @@
 
           <div class="resource-section__body">
             <p
-              >You have learned the basics of JavaScript, time to learn modern and new concepts to help you write easier and better codes like  Arrow functions, Modules, and the other goodies that came with JavaScript es6.</p
+              >You have learned the basics of JavaScript, time to learn modern and newer concepts to help you write easier and better codes like  Arrow functions, Modules, and the other goodies that came with JavaScript ES6.</p
             >
           </div>
 
@@ -1385,7 +1385,7 @@
               >Version Control also known as Source Control is a way of managing and tracking the changes made to your code over time. This allows you to easily compare changes made and revert to old versions if the need arises. You can find different tools below that help you do that.</p
             >
             <p
-              >If you are finding Git hard to understand, you can learn Git Desktop which is less complicated, use it for a while and then come back to Git.</p
+              >If you are finding Git hard to understand, you can learn Git Desktop which is less complicated. Use it for a while and then come back to Git.</p
             >
           </div>
 
@@ -1561,11 +1561,10 @@
 
           <div class="resource-section__body">
             <p
-              >CSS frameworks and libraries
+              >
 CSS frameworks and libraries are reusable codes written by someone else that you can use instead of writing your CSS code from scratch.</p
             >
-          p
-              >They aid you in having a more standards-compliant and responsive web design using the CSS language. And some even come with extra features that have JavaScript integrated into them. Check out some of the most popular ones below.</p
+         < p>They aid you in having a more standards-compliant and responsive web design using the CSS language. And some even come with extra features that have JavaScript integrated into them. Check out some of the most popular ones below.</p
             >
           </div>
 
@@ -2125,11 +2124,11 @@ CSS frameworks and libraries are reusable codes written by someone else that you
 
         <!--* JSON -->
         <section id="json" class="resource-section">
-          <h2 class="resource-section__heading">JSON and JSON Server</h2>
+          <h2 class="resource-section__heading">JSON</h2>
 
           <div class="resource-section__body">
             <p
-              >JSON which stands forJavaScript Object Notation is a text-based data exchange format. Commonly used for transmitting data in web applications like sending data to and fro between the server and client, so it can be displayed on a web page, or vice versa.</p
+              >JSON which stands for JavaScript Object Notation is a text-based data exchange format. Commonly used for transmitting data in web applications like sending data to and fro between the server and client, so it can be displayed on a web page, or vice versa.</p
             >
           </div>
 
@@ -3305,10 +3304,7 @@ CSS frameworks and libraries are reusable codes written by someone else that you
 
           <div class="resource-section__body">
             <p
-              >Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempore
-              eum reprehenderit incidunt laudantium a dolores, deleniti nihil
-              totam corrupti ex explicabo placeat? Magni omnis, blanditiis quam
-              dolorem impedit voluptatum numquam!</p
+              >This is a collection other useful resources that couldn't fit into the sections above. Explore!</p
             >
           </div>
 
