formatted the codes and changed the footer bgcolor.

--- a/html/careers.html
+++ b/html/careers.html
@@ -138,10 +138,9 @@
       <!-- * banner -->
       <header class="banner career-page-banner">
         <div class="banner-wrapper">
-          <p
-            >"A year from now you may wish you had started today." – Karen
-            Lamb</p
-          >
+          <p></p>
+            "A year from now you may wish you had started today." – Karen Lamb
+          </p>
         </div>
       </header>
 
@@ -151,37 +150,37 @@
           <div class="intro-wrapper">
             <h1 class="heading">Begin Your Tech Career Journey!</h1>
             <div class="intro__body">
-              <p
-                >The technology industry is vast and can be quite frightening
-                for one who is not familiar with it. Very often non-technical
-                people believe that the word *Tech* is a job title; maybe
-                because we refer to people who work in the tech space as tech
-                sis or tech bro. But every tech sis or tech bro has a more
-                specific job title and their responsibilities differ even within
-                the same company.</p
-              >
-              <p
-                >There are over 20 job titles in the Tech Industry and they can
+              <p>
+                The technology industry is vast and can be quite frightening for
+                one who is not familiar with it. Very often non-technical people
+                believe that the word *Tech* is a job title; maybe because we
+                refer to people who work in the tech space as tech sis or tech
+                bro. But every tech sis or tech bro has a more specific job
+                title and their responsibilities differ even within the same
+                company.
+              </p>
+              <p>
+                There are over 20 job titles in the Tech Industry and they can
                 be divided into 2 categories; the one that requires you to write
                 code and the one that doesn't. You can learn about them by going
-                through the resources below.</p
-              >
-              <p
-                >Once you have done that, you should be able to have a basic
+                through the resources below.
+              </p>
+              <p>
+                Once you have done that, you should be able to have a basic
                 understanding of what the different careers are about, the
                 responsibilities of each of them, and the requirements needed to
                 go into it. You can then decide on which career path you would
-                like to begin with.</p
-              >
+                like to begin with.
+              </p>
             </div>
           </div>
         </section>
 
         <!--* choosing a career -->
         <section class="resource-section">
-          <h2 class="resource-section__heading"
-            >Learn About the Tech Careers</h2
-          >
+          <h2 class="resource-section__heading">
+            Learn About the Tech Careers
+          </h2>
           <div class="resource-section__links">
             <!-- articles -->
             <div class="resource-card">
@@ -208,8 +207,8 @@
             <!-- videos -->
             <div class="resource-card">
               <h3 class="resource-card-title">Videos</h3>
-              <ul class="resource-card-links"
-                ><li class="resource-link">
+              <ul class="resource-card-links">
+                <li class="resource-link">
                   <a target="_blank" href="#"></a>
                 </li>
               </ul>
@@ -226,10 +225,9 @@
             <a href="/html/careers/frontend.html" class="careers__card-link">
               <div class="careers__card">
                 <h3>Frontend</h3>
-                <p
-                  >Curated guide and resources to becoming a frontend
-                  developer.</p
-                >
+                <p>
+                  Curated guide and resources to becoming a frontend developer.
+                </p>
               </div>
             </a>
             <!-- backend card -->
@@ -237,10 +235,9 @@
               <p class="coming-soon"><span>Coming Soon</span></p>
               <div class="careers__card">
                 <h3>Backend</h3>
-                <p
-                  >Curated guide and resources to becoming a backend
-                  developer.</p
-                >
+                <p>
+                  Curated guide and resources to becoming a backend developer.
+                </p>
               </div>
             </a>
             <!-- android/mobile card -->
@@ -248,10 +245,10 @@
               <p class="coming-soon"><span>Coming Soon</span></p>
               <div class="careers__card">
                 <h3>Android/Mobile</h3>
-                <p
-                  >Curated guide and resources to becoming an android/mobile
-                  developer.</p
-                >
+                <p>
+                  Curated guide and resources to becoming an android/mobile
+                  developer.
+                </p>
               </div>
             </a>
             <!-- uiux card  -->
@@ -275,9 +272,9 @@
               <p class="coming-soon"><span>Coming Soon</span></p>
               <div class="careers__card">
                 <h3>Technical Writing</h3>
-                <p
-                  >Curated guide and resources to becoming a product manager.</p
-                >
+                <p>
+                  Curated guide and resources to becoming a product manager.
+                </p>
               </div>
             </a>
           </div>
@@ -296,25 +293,25 @@
                 href="https://github.com/Timonwa/techroadmap"
                 >GitHub</a
               >. All meaningful contributions are welcome to help grow this
-              project and you don't need to know how to code to contribute.</p
-            >
-            <p
-              >If you would like to contribute to this project, please visit our
+              project and you don't need to know how to code to contribute.
+            </p>
+            <p>
+              If you would like to contribute to this project, please visit our
               <a
                 class="paragraph-links"
                 href="https://github.com/Timonwa/techroadmap/blob/main/CONTRIBUTING.md"
                 >contributors page</a
               >
-              to find out how to contribute.</p
-            >
+              to find out how to contribute.
+            </p>
             <p style="display: none">
               A considerable amount of my time is spent doing unpaid community
               work on things that I hope will help humanity in some way. Your
               sponsorship helps me continue to produce more open-source and free
               educational material consumed by hundreds of thousands of
-              developers every month.</p
-            ></div
-          >
+              developers every month.
+            </p>
+          </div>
         </div>
       </aside>
 
@@ -339,19 +336,18 @@
 
           <!-- attribution -->
           <div class="sections attribution">
-            <p
-              ><a class="paragraph-links" href="/">Tech Roadmap</a> is created
-              by
+            <p>
+              <a class="paragraph-links" href="/">Tech Roadmap</a> is created by
               <a class="paragraph-links" href="https://github.com/timonwa"
                 >Timonwa</a
-              ></p
-            >
+              >
+            </p>
           </div>
 
           <!-- website quote -->
           <div class="sections quote">
-            <p
-              >Roadmaps, articles, and useful resources to help you choose a
+            <p>
+              Roadmaps, articles, and useful resources to help you choose a
               career path, start your journey, and grow in tech.
             </p>
           </div>
