--- a/html/contribute.html
+++ b/html/contribute.html
@@ -138,10 +138,10 @@
       <!-- * banner -->
       <header class="banner contribute-page-banner">
         <div class="banner-wrapper">
-          <p
-            >"Alone we can do so little; together we can do so much." – Helen
-            Keller</p
-          >
+          <p></p>
+            "Alone we can do so little; together we can do so much." – Helen
+            Keller
+          </p>
         </div>
       </header>
 
@@ -151,44 +151,44 @@
           <div class="intro-wrapper">
             <h1 class="heading">How to contribute to this Project!</h1>
             <div class="intro__body">
-              <p
-                >I'm so excited to have you contribute to this project. You are
+              <p>
+                I'm so excited to have you contribute to this project. You are
                 the real MVP. 🎉
               </p>
-              <p
-                >There are so many ways in which you can help us grow Tech
+              <p>
+                There are so many ways in which you can help us grow Tech
                 Roadmap into a budding tech community and the no. 1 online
-                resource for tech careers and learning. You can do so by</p
-              >
+                resource for tech careers and learning. You can do so by
+              </p>
 
               <ul class="contributing-list">
                 <li>adding a new roadmap,</li>
-                <li
-                  >editing, or suggesting changes to the existing roadmaps,</li
-                >
-                <li
-                  >contributing to the content and resources of the website,</li
-                >
-                <li
-                  >fixing grammar mistakes or typos on the contents of the
-                  website,</li
-                >
+                <li>
+                  editing, or suggesting changes to the existing roadmaps,
+                </li>
+                <li>
+                  contributing to the content and resources of the website,
+                </li>
+                <li>
+                  fixing grammar mistakes or typos on the contents of the
+                  website,
+                </li>
                 <li>contributing to the UI design of the site,</li>
                 <li>refactoring our codebase, etc.</li>
               </ul>
 
-              <p
-                >If you want to contribute as a developer, you can do so
+              <p>
+                If you want to contribute as a developer, you can do so
                 <a
                   class="paragraph-links"
                   href="https://github.com/Timonwa/techroadmap"
                   >here</a
                 >. If you are a non-developer or do not know how to code but
                 still want to contribute, you can do that
-                <a class="paragraph-links" href="#">here</a>.</p
-              >
-              <p
-                >Do read our
+                <a class="paragraph-links" href="#">here</a>.
+              </p>
+              <p>
+                Do read our
                 <a
                   class="paragraph-links"
                   href="https://github.com/Timonwa/techroadmap/blob/main/CONTRIBUTING.md"
@@ -200,8 +200,8 @@
                   href="https://github.com/Timonwa/techroadmap"
                   >Github repo</a
                 >
-                a star, it would mean much to us.</p
-              >
+                a star, it would mean much to us.
+              </p>
               <p>See you soon! 👋</p>
             </div>
           </div>
@@ -226,25 +226,25 @@
                 href="https://github.com/Timonwa/techroadmap"
                 >GitHub</a
               >. All meaningful contributions are welcome to help grow this
-              project and you don't need to know how to code to contribute.</p
-            >
-            <p
-              >If you would like to contribute to this project, please visit our
+              project and you don't need to know how to code to contribute.
+            </p>
+            <p>
+              If you would like to contribute to this project, please visit our
               <a
                 class="paragraph-links"
                 href="https://github.com/Timonwa/techroadmap/blob/main/CONTRIBUTING.md"
                 >contributors page</a
               >
-              to find out how to contribute.</p
-            >
+              to find out how to contribute.
+            </p>
             <p style="display: none">
               A considerable amount of my time is spent doing unpaid community
               work on things that I hope will help humanity in some way. Your
               sponsorship helps me continue to produce more open-source and free
               educational material consumed by hundreds of thousands of
-              developers every month.</p
-            ></div
-          >
+              developers every month.
+            </p>
+          </div>
         </div>
       </aside>
 
@@ -269,19 +269,18 @@
 
           <!-- attribution -->
           <div class="sections attribution">
-            <p
-              ><a class="paragraph-links" href="/">Tech Roadmap</a> is created
-              by
+            <p>
+              <a class="paragraph-links" href="/">Tech Roadmap</a> is created by
               <a class="paragraph-links" href="https://github.com/timonwa"
                 >Timonwa</a
-              ></p
-            >
+              >
+            </p>
           </div>
 
           <!-- website quote -->
           <div class="sections quote">
-            <p
-              >Roadmaps, articles, and useful resources to help you choose a
+            <p>
+              Roadmaps, articles, and useful resources to help you choose a
               career path, start your journey, and grow in tech.
             </p>
           </div>
