--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined"
     />
-    
+
     <!--* CSS -->
     <!--* CSS (resets) -->
     <!-- Normalize.css -->
@@ -130,10 +130,10 @@
       <header class="banner home-page-banner">
         <div class="banner-wrapper">
           <h1>Tech Career Roadmap</h1>
-          <p
-            >Roadmaps, articles, and useful resources to help you choose a career path,
-            start your journey and grow in tech.</p
-          >
+          <p>
+            Roadmaps, articles, and useful resources to help you choose a career
+            path, start your journey and grow in tech.
+          </p>
         </div>
       </header>
 
@@ -143,15 +143,28 @@
           <div class="intro-wrapper">
             <h2 class="heading">Welcome!</h2>
             <div class="intro__body">
-              <p
-                >Tech Roadmap is a free online resource on careers in the tech industry. Anyone who wants to break or transition into the tech industry or has already broken into it, can use these resources to choose and define their career path and learn about the skills needed to build themselves in the chosen career.</p
-              >
-              <p
-                >Here you have access to collections of ebooks, courses, videos, articles, guides, tools, etc on the different careers in tech including the no-code jobs. So if you are just starting your career or have yet to choose a career path, then you are in the right place.</p
-              >
-              <p
-                >You can click on one of the career cards below if you have already chosen a career path or go to our <a class="paragraph-links" href="/html/careers.html">careers page</a> if you need help in deciding the one to choose.</p
-              >
+              <p>
+                Tech Roadmap is a free online resource on careers in the tech
+                industry. Anyone who wants to break or transition into the tech
+                industry or has already broken into it, can use these resources
+                to choose and define their career path and learn about the
+                skills needed to build themselves in the chosen career.
+              </p>
+              <p>
+                Here you have access to collections of ebooks, courses, videos,
+                articles, guides, tools, etc on the different careers in tech
+                including the no-code jobs. So if you are just starting your
+                career or have yet to choose a career path, then you are in the
+                right place.
+              </p>
+              <p>
+                You can click on one of the career cards below if you have
+                already chosen a career path or go to our
+                <a class="paragraph-links" href="/html/careers.html"
+                  >careers page</a
+                >
+                if you need help in deciding the one to choose.
+              </p>
             </div>
           </div>
         </section>
@@ -165,10 +178,9 @@
             <a href="/html/careers/frontend.html" class="careers__card-link">
               <div class="careers__card">
                 <h3>Frontend</h3>
-                <p
-                  >Curated guide and resources to becoming a frontend
-                  developer.</p
-                >
+                <p>
+                  Curated guide and resources to becoming a frontend developer.
+                </p>
               </div>
             </a>
             <!-- backend card -->
@@ -176,10 +188,9 @@
               <p class="coming-soon"><span>Coming Soon</span></p>
               <div class="careers__card">
                 <h3>Backend</h3>
-                <p
-                  >Curated guide and resources to becoming a backend
-                  developer.</p
-                >
+                <p>
+                  Curated guide and resources to becoming a backend developer.
+                </p>
               </div>
             </a>
             <!-- android/mobile card -->
@@ -187,10 +198,10 @@
               <p class="coming-soon"><span>Coming Soon</span></p>
               <div class="careers__card">
                 <h3>Android/Mobile</h3>
-                <p
-                  >Curated guide and resources to becoming an android/mobile
-                  developer.</p
-                >
+                <p>
+                  Curated guide and resources to becoming an android/mobile
+                  developer.
+                </p>
               </div>
             </a>
             <!-- uiux card  -->
@@ -214,9 +225,9 @@
               <p class="coming-soon"><span>Coming Soon</span></p>
               <div class="careers__card">
                 <h3>Technical Writing</h3>
-                <p
-                  >Curated guide and resources to becoming a product manager.</p
-                >
+                <p>
+                  Curated guide and resources to becoming a product manager.
+                </p>
               </div>
             </a>
           </div>
@@ -229,19 +240,31 @@
           <h2 class="heading">Open Source</h2>
           <div class="opensource__body">
             <p>
-              This project is OpenSource and is hosted on <a class="paragraph-links" href="https://github.com/Timonwa/techroadmap">GitHub</a>. All meaningful contributions are welcome to help grow this project and you don't need to know how to code to contribute.</p
-            >
-            <p
-              >If you would like to contribute to this project, please visit our <a class="paragraph-links" href="https://github.com/Timonwa/techroadmap/blob/main/CONTRIBUTING.md">contributors page</a> to find out how to contribute.</p
-            >
+              This project is OpenSource and is hosted on
+              <a
+                class="paragraph-links"
+                href="https://github.com/Timonwa/techroadmap"
+                >GitHub</a
+              >. All meaningful contributions are welcome to help grow this
+              project and you don't need to know how to code to contribute.
+            </p>
+            <p>
+              If you would like to contribute to this project, please visit our
+              <a
+                class="paragraph-links"
+                href="https://github.com/Timonwa/techroadmap/blob/main/CONTRIBUTING.md"
+                >contributors page</a
+              >
+              to find out how to contribute.
+            </p>
             <p style="display: none">
               A considerable amount of my time is spent doing unpaid community
               work on things that I hope will help humanity in some way. Your
               sponsorship helps me continue to produce more open-source and free
               educational material consumed by hundreds of thousands of
-              developers every month.</p
-            ></div
-          >
+              developers every month.
+            </p>
+          </div>
         </div>
       </aside>
 
@@ -266,20 +289,19 @@
 
           <!-- attribution -->
           <div class="sections attribution">
-            <p
-              ><a class="paragraph-links" href="/">Tech Roadmap</a> is created
-              by
+            <p>
+              <a class="paragraph-links" href="/">Tech Roadmap</a> is created by
               <a class="paragraph-links" href="https://github.com/timonwa"
                 >Timonwa</a
-              ></p
-            >
+              >
+            </p>
           </div>
 
           <!-- website quote -->
           <div class="sections quote">
-            <p
-              >Roadmaps, articles, and useful resources to help you choose a career
-              path, start your journey, and grow in tech.
+            <p>
+              Roadmaps, articles, and useful resources to help you choose a
+              career path, start your journey, and grow in tech.
             </p>
           </div>
 
