Added JavaScript links to frontend page

--- a/src/html/careers/frontend.html
+++ b/src/html/careers/frontend.html
@@ -1142,21 +1142,23 @@
               <h3 class="resource-card-title">Videos</h3>
               <ul class="resource-card-links">
                 <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 1, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
+                  <a target="_blank" href="https://youtu.be/PkZNo7MFNFg"
+                    >Learn JavaScript. Full course for beginners. ~ FreeCodeCamp</a
                   >
                 </li>
                 <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 2, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
+                  <a target="_blank" href="https://youtu.be/ResWVWI333o"
+                    >Javascript for web designers. ~ Envato Tuts</a
                   >
                 </li>
                 <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 3, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
+                  <a target="_blank" href="https://youtu.be/UKgZguxcPE8"
+                    >JavaScript DOM crash course. ~ Code and Create</a
+                  >
+                </li>
+                <li class="resource-link">
+                  <a target="_blank" href="https://youtu.be/0ik6X4DJKCc"
+                    >Learn JavaScript DOM manipulation in 18 minutes. ~ WebDevSimplified</a
                   >
                 </li>
               </ul>
@@ -1167,21 +1169,28 @@
               <h3 class="resource-card-title">Curated Playlist</h3>
               <ul class="resource-card-links">
                 <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 1, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
+                  <a target="_blank" href="https://youtube.com/playlist?list=PL4cUxeGkcC9i9Ae2D9Ee1RvylH38dKuET">
+                    JavaScript Tutorials for beginners. ~ The Net Ninja</a
                   >
                 </li>
                 <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 2, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
+                  <a target="_blank" href="https://youtube.com/playlist?list=PL4cUxeGkcC9i9Ae2D9Ee1RvylH38dKuET">
+                    JavaScript Tutorials for beginners. ~ Telusko</a
                   >
                 </li>
                 <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 3, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
+                  <a target="_blank" href="https://youtube.com/playlist?list=PL4cUxeGkcC9gfoKa5la9dsdCNpuey2s-V"
+                    >JavaScript DOM tutorial ~ The Net Ninja</a
+                  >
+                </li>
+                <li class="resource-link">
+                  <a target="_blank" href="https://youtube.com/playlist?list=PLVvjrrRCBy2JS8__NYlhPeaoNz2p1aPEN">
+                    JavaScript DOM tutorial. ~ Dcode</a
+                  >
+                </li>
+                <li class="resource-link">
+                  <a target="_blank" href="https://youtube.com/playlist?list=PLillGF-RfqbbnEGy3ROiLWk7JMCuSyQtX">
+                   Everything JavaScript tutorials plus projects to build. ~ Travesty Media</a
                   >
                 </li>
               </ul>
@@ -1193,24 +1202,9 @@
               <ul class="resource-card-links">
                 <li class="resource-link">
                   <a target="_blank" href="#"
-                    >Link 1, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
+                    ></a
                   >
-                  <span class="resource-link-badge">Udemy</span>
-                </li>
-                <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 2, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
-                  >
-                  <span class="resource-link-badge">Coursera</span>
-                </li>
-                <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 3, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
-                  >
-                  <span class="resource-link-badge">Skillshare</span>
+                  <span class="resource-link-badge"></span>
                 </li>
               </ul>
             </div>
@@ -1221,20 +1215,7 @@
               <ul class="resource-card-links">
                 <li class="resource-link">
                   <a target="_blank" href="#"
-                    >Link 1, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
-                  >
-                </li>
-                <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 2, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
-                  >
-                </li>
-                <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 3, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
+                    ></a
                   >
                 </li>
               </ul>
@@ -1245,21 +1226,18 @@
               <h3 class="resource-card-title">Practice Projects</h3>
               <ul class="resource-card-links">
                 <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 1, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
+                  <a target="_blank" href="https://youtu.be/dtKciwk_si4"
+                    >10 JavaScript projects in 10 hours. Coding Challenge. ~ Florin Pop</a
                   >
                 </li>
                 <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 2, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
+                  <a target="_blank" href="https://youtu.be/c5SIG7Ie0dM"
+                    >15 vanilla JavaScript projects. ~ Coding Addict</a
                   >
                 </li>
                 <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 3, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
+                  <a target="_blank" href="https://www.google.com/amp/s/www.freecodecamp.org/news/javascript-projects-for-beginners"
+                    >40 JavaScript projects for beginners – Easy ideas to get started coding JS. ~ FreeCodeCamp</a
                   >
                 </li>
               </ul>
@@ -1272,24 +1250,9 @@
               <ul class="resource-card-links">
                 <li class="resource-link">
                   <a target="_blank" href="#"
-                    >Link 1, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
+                    ></a
                   >
-                  <span class="resource-link-badge">Video</span>
-                </li>
-                <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 2, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
-                  >
-                  <span class="resource-link-badge">Article</span>
-                </li>
-                <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 3, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
-                  >
-                  <span class="resource-link-badge">Document</span>
+                  <span class="resource-link-badge"></span>
                 </li>
               </ul>
             </div>
