Fixed link errors in JavaScript resource section

--- a/src/html/careers/frontend.html
+++ b/src/html/careers/frontend.html
@@ -1157,7 +1157,7 @@
                   >
                 </li>
                 <li class="resource-link">
-                  <a target="_blank" href="https://youtu.be/0ik6X4DJKCc"
+                  <a target="_blank" href="https://youtu.be/y17RuWkWdn8"
                     >Learn JavaScript DOM manipulation in 18 minutes. ~ WebDevSimplified</a
                   >
                 </li>
@@ -1174,7 +1174,7 @@
                   >
                 </li>
                 <li class="resource-link">
-                  <a target="_blank" href="https://youtube.com/playlist?list=PL4cUxeGkcC9i9Ae2D9Ee1RvylH38dKuET">
+                  <a target="_blank" href="https://youtube.com/playlist?list=PLsyeobzWxl7qtP8Lo9TReqUMkiOp446cV">
                     JavaScript Tutorials for beginners. ~ Telusko</a
                   >
                 </li>
@@ -1190,21 +1190,21 @@
                 </li>
                 <li class="resource-link">
                   <a target="_blank" href="https://youtube.com/playlist?list=PLillGF-RfqbbnEGy3ROiLWk7JMCuSyQtX">
-                   Everything JavaScript tutorials plus projects to build. ~ Travesty Media</a
+                   Everything Vanilla JavaScript tutorials plus projects to build. ~ Travesty Media</a
                   >
                 </li>
               </ul>
             </div>
 
-            <!-- paid courses -->
+            <!-- courses -->
             <div class="resource-card">
               <h3 class="resource-card-title">Paid Courses</h3>
               <ul class="resource-card-links">
                 <li class="resource-link">
-                  <a target="_blank" href="#"
-                    ></a
+                  <a target="_blank" href="https://www.freecodecamp.org/learn/javascript-algorithms-and-data-structures/"
+                    >JavaScript Algorithms and Data Structures. ~ FreeCodeCamp</a
                   >
-                  <span class="resource-link-badge"></span>
+                  <span class="resource-link-badge">Free</span>
                 </li>
               </ul>
             </div>
@@ -1236,7 +1236,7 @@
                   >
                 </li>
                 <li class="resource-link">
-                  <a target="_blank" href="https://www.google.com/amp/s/www.freecodecamp.org/news/javascript-projects-for-beginners"
+                  <a target="_blank" href="https://www.freecodecamp.org/news/javascript-projects-for-beginners"
                     >40 JavaScript projects for beginners – Easy ideas to get started coding JS. ~ FreeCodeCamp</a
                   >
                 </li>
